# db-assets

./: .gitignore  README.md  WIKI.md  db-assets.py  devbox.json  pyproject.toml  requirements.txt
dbassets/: __main__.py
dbassets/config/: config.toml
dbassets/connectors/nxc/: nxc_smb_extractor.py  nxc_workspace_syncer.py
dbassets/connectors/nxc/extractors/: credentials.py  ftp.py  ldap.py  mssql.py  nfs.py  rdp.py  smb.py  ssh.py  users.py  vnc.py  winrm.py  wmi.py
dbassets/db_api/: creds.py  formatter.py  hosts.py  parsing.py  utils.py
dbassets/tests/artifacts/: creds.txt  hosts.txt  pypykatz.txt
dbassets/tests/cli_tests/: common_cli.py  conftest.py  test_add_credential.py  test_add_host.py  test_delete_credential.py  test_delete_host.py  test_edit_credential.py  test_edit_host.py
dbassets/tests/tui_tests/: common_tui.py  conftest.py  test_add_credential_tui.py  test_add_host_tui.py  test_delete_credential_tui.py  test_delete_host_tui.py  test_edit_credential_tui.py  test_edit_host_tui.py
dbassets/tui/common/: open_file.py
dbassets/tui/css/: add_object.tcss  delete_object.tcss  edit_object.tcss
dbassets/tui/db_creds/: add_credential.py  db_creds.py  delete_credential.py  edit_credential.py
dbassets/tui/db_hosts/: add_host.py  db_hosts.py  delete_host.py  edit_host.py
